# Pulse-Retrieval-with-Jax

./: BaseClasses.py  LICENSE  README.md  TwoDSI_z_error_gradients.py  TwoDSI_z_error_pseudo_hessian.py  _usage_example.ipynb  bayesian_optimization.py  bsplines_1d.py  chirpscan_z_error_gradients.py  chirpscan_z_error_pseudo_hessian.py  classic_algorithms_2dsi.py  classic_algorithms_base.py  classic_algorithms_chirpscan.py  classic_algorithms_dscan.py  classic_algorithms_frog.py  construct_s_prime.py  create_population.py  dscan_z_error_pseudo_hessian.py  frog_z_error_gradients.py  frog_z_error_pseudo_hessian.py  general_algorithms_2dsi.py  general_algorithms_base.py  general_algorithms_chirpscan.py  general_algorithms_chirpscan_real_fields.py  general_algorithms_dscan.py  general_algorithms_frog.py  initial_guess_doublepulse.py  lbfgs.py  linesearch.py  make_pulse.py  make_pulse_and_trace.py  make_trace.py  nonlinear_cg.py  phase_matrix_funcs.py  pie_pseudo_hessian.py  pyproject.toml  requirements.txt  some_definitions_and_formulas.ipynb  stepsize.py  update_signal.py  (+1 more)
_tests/: test_2dsi_classical.py  test_2dsi_general.py  test_2dsi_general_real_fields.py  test_chirp_scan_classical.py  test_chirp_scan_general.py  test_chirp_scan_general_real_fields.py  test_frog_classical.py  test_frog_general.py  test_frog_general_real_fields.py  test_simulate_traces.py
examples/: run_autodiff.py  run_copra_with_chirpscan.py  run_differential_evolution.py  run_pie.py  simulate_and_reconstruct_2DSI.py  simulate_and_retrieve_TREX.py  simulate_cross_correlation_frog.py  (+1 more)
src/: __init__.py  (+6 more)
(+155 files in other folders)
