[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pulsedjax"
version = "0.1.0"
description = "PulsedJAX: Pulse-Retrieval-with-JAX"


authors = [{ name = "Till Stehling", email = "tilljakobstehling@gmail.com" }]
license = { text = "Apache-2.0" }


dependencies = [
	'equinox>=0.13.2',
	'interpax',
	'jax>=0.8.0',
	'lineax>=0.0.8',
	'matplotlib>=3.10.7',
	'numpy>=2.3.5',
	'optimistix>=0.0.11',
	'refractiveindex>=0.0.7',
	'scipy>=1.16.3',
	'evosax',
	'optax',
	'setuptools'
]


[project.urls]
Repository = "https://github.com/matillda123/Pulse-Retrieval-with-JAX"
